--- a/src/front.html
+++ b/src/front.html
@@ -15,5 +15,8 @@ VSCode
     padding: .1em .7em;
     border-radius: 11px;
     background-color: #bf616a;
+    
+    /* Placement */
+    margin: 0 auto;
 }
 </style>
