Fix back of card

--- a/src/back.html
+++ b/src/back.html
@@ -10,6 +10,11 @@
     <div class="front-container">
         {{Action}}
     </div>
+    <!-- Front of card ends -->
+
+    <hr class="card-divider"/>
+    
+    <!-- Back of card begins -->
     <span id="shortcut-sequence" hidden>{{Shortcut}}</span>
     <div id="formatted-sequence" class="shortcut-container">
         {{^Shortcut}}
