Add source comment

--- a/src/back.html
+++ b/src/back.html
@@ -1,3 +1,5 @@
+<!-- See ginger51011/prty-shortcut-cards for full source -->
+
 <div class="note">
     <div class="title-container">
         <span class="title-text">
