Rename fields again

--- a/src/back.html
+++ b/src/back.html
@@ -17,13 +17,13 @@
     <hr class="card-divider"/>
     
     <!-- Back of card begins -->
-    <span id="shortcut-combo-1" hidden>{{Shortcut Combination}}</span>
-    <span id="shortcut-combo-2" hidden>{{Extra Shortcut Combination}}</span>
+    <span id="shortcut-combo-1" hidden>{{Key Combination}}</span>
+    <span id="shortcut-combo-2" hidden>{{Extra Key Combination}}</span>
     <!-- Is unhidden when element is ready -->
     <div id="formatted-shortcut" class="shortcut-container" hidden>
-        {{^Shortcut Combination}}
+        {{^Key Combination}}
             <i>Fill field shortcut in form `Ctrl Shift P` to format!</i>
-        {{/Shortcut Combination}}
+        {{/Key Combination}}
     </div>
 
     <script>
