Fix error in if statement

--- a/src/back.html
+++ b/src/back.html
@@ -37,7 +37,7 @@
             const shortcutArray = shortcutText.split(' ');
             appendKbd(shortcutArray, shortcutContainer);
             
-            if (extracomboText && extracomboText.length !== '') {
+            if (extracomboText && extracomboText.length !== 0) {
                 // Add space before next combination
                 shortcutContainer.append(' ');
 
