Update dist, fix typo

--- a/src/back.html
+++ b/src/back.html
@@ -55,7 +55,7 @@
                 comboArray.forEach((key, index) => {
                     if (index !== 0) {
                         // Prepend a plus, this is not the first in a combo. Add
-                        // word boundries to allow for wrapping
+                        // word boundaries to allow for wrapping
                         container.append(document.createElement('wbr'), '+', document.createElement('wbr'));
                     }
 
